# circe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  install.ps1  install.sh  release.toml
.cursor/rules/: location.mdc
.github/: CODEOWNERS  release_template.md
.github/workflows/: check-dependencies.yml  check-dynamic.yml  release.yml
docs/dev/: README.md
integration/: Cargo.toml
integration/src/: lib.rs
integration/testdata/fossacli/: Dockerfile.app_deps_example  Dockerfile.changeset_example  Dockerfile.changesets_symlinked_entries
integration/tests/it/: extract.rs  list.rs  main.rs  reexport.rs
lib/: Cargo.toml  README.md  release.toml
lib/src/: cfs.rs  cio.rs  daemon.rs  docker.rs  ext.rs  extract.rs  fossacli.rs  lib.rs  registry.rs  transform.rs
lib/src/testdata/: nginx_manifest.json
lib/tests/it/: daemon.rs  docker.rs  extract.rs  main.rs  platform.rs  reference.rs  registry.rs  transform.rs
lib/tests/it/testdata/fossacli/: Dockerfile.changeset_example  Dockerfile.changesets_symlinked_entries
nginx-extracted/etc/: ld.so.cache  shadow  shadow-
nginx-extracted/etc/apt/sources.list.d/: debian.sources
nginx-extracted/etc/fonts/conf.d/: 70-no-bitmaps.conf
nginx-extracted/etc/ssl/certs/: 988a38cb.0  NetLock_Arany_=Class_Gold=_Főtanúsítvány.pem
nginx-extracted/usr/lib/aarch64-linux-gnu/: libGeoIP.so.1.6.12  libcurl.so.4.8.0
nginx-extracted/usr/sbin/: nginx  nginx-debug
nginx-extracted/var/cache/ldconfig/: aux-cache
nginx-extracted/var/lib/apt/: extended_states
nginx-extracted/var/lib/dpkg/: available  status  status-old
nginx-extracted/var/lib/dpkg/info/: curl.md5sums  libaom3:arm64.md5sums  libcurl4:arm64.md5sums  libdav1d6:arm64.md5sums  libde265-0:arm64.md5sums  libgeoip1:arm64.md5sums  libheif1:arm64.md5sums  libtiff6:arm64.md5sums  libxslt1.1:arm64.list  libxslt1.1:arm64.md5sums  nginx-module-geoip.md5sums  nginx-module-image-filter.md5sums  nginx-module-njs.md5sums  nginx-module-xslt.md5sums  nginx.list  nginx.md5sums
nginx-extracted/var/log/apt/: eipp.log.xz
src/: lib.rs  main.rs
src/cmd/: extract.rs
tests/it/: main.rs  reference.rs
