[package]
name = "circe_lib"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Black <me@jessica.black>", "FOSSA Inc. <support@fossa.com>"]
description = "Extracts and examines the contents of containers"
license = "MPL-2.0"
repository = "https://github.com/fossas/circe"
homepage = "https://github.com/fossas/circe"
documentation = "https://docs.rs/circe"
readme = "README.md"
keywords = ["cli", "dependencies", "containers", "images", "oci"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-compression = { version = "0.4.18", features = ["tokio", "gzip", "zstd"] }
async-tempfile = "0.6.0"
bon = "3.3.0"
bytes = "1.9.0"
color-eyre = "0.6.3"
derive_more = { version = "1.0.0", features = ["full"] }
enum-assoc = "1.2.4"
futures-lite = "2.5.0"
hex = "0.4.3"
hex-magic = "0.0.2"
itertools = "0.13.0"
oci-client = "0.14.0"
os_str_bytes = "7.0.0"
static_assertions = "1.1.0"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
tokio = "1.42.0"
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.5.0"
simple_test_case = "1.2.0"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.42.0", features = ["full"] }
