[package]
name = "circe_lib"
version = "0.0.0"
edition = "2021"
authors = ["Jessica Black <me@jessica.black>", "FOSSA Inc. <support@fossa.com>"]
description = "Extracts and examines the contents of containers"
license = "MPL-2.0"
repository = "https://github.com/fossas/circe"
homepage = "https://github.com/fossas/circe"
documentation = "https://docs.rs/circe"
readme = "README.md"
keywords = ["cli", "dependencies", "containers", "images", "oci"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[features]
default = []
test-custom-namespace = []
test-docker-interop = []

[dependencies]
async-compression = { version = "0.4.18", features = ["tokio", "gzip", "zstd"] }
base64 = "0.22.1"
async-tempfile = "0.7.0"
bon = "3.3.0"
bytes = "1.9.0"
color-eyre = "0.6.3"
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }
enum-assoc = "1.2.4"
futures-lite = "2.5.0"
glob-match = "0.2.1"
hex = "0.4.3"
hex-magic = "0.0.2"
itertools = "0.14.0"
oci-client = { version = "0.15.0", features = ["rustls-tls"], default-features = false }
os_str_bytes = "7.0.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
static_assertions = "1.1.0"
strum = { version = "0.27.0", features = ["derive"] }
tap = "1.0.1"
tokio = { version = "1.42.0", features = ["process"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
sha2 = "0.10.8"
bollard = "0.19.0"
enum_delegate = "0.2.0"
enum_dispatch = "0.3.13"
async-stream = "0.3.6"

[dev-dependencies]
async-walkdir = "2.0.0"
pretty_assertions = "1.4.1"
proptest = "1.5.0"
simple_test_case = "1.2.0"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.42.0", features = ["full"] }
